--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <img id="mannyImage" src="Manny.png" alt="Manny">
+    <img id="mannyImage" src="Manny.jpg" alt="Manny">
     <span id="parolaNascosta" style="display: none;">Parola Segreta</span>
     <script>
             document.getElementById('mannyImage').addEventListener('click', function(event) {
