--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             const x = event.offsetX;
             const y = event.offsetY;
 
+            console.log("Click a X: " + x + ", Y: " + y);
+
             // Definisci la zona "cliccabile" (esempio: un rettangolo)
             const zonaClicXInizio = 50; // Coordinata X inizio zona
             const zonaClicXFine = 150;   // Coordinata X fine zona
