--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             if (x >= zonaClicXInizio && x <= zonaClicXFine && y >= zonaClicYInizio && y <= zonaClicYFine) {
                 // Mostra la parola
                 document.getElementById('parolaNascosta').style.display = 'block';
+                console.log("PAROLA MOSTRATA")
             } else {
                 // Opzionale: puoi aggiungere un'azione per click fuori zona, ad esempio un alert
                 //alert("Hai cliccato fuori dalla zona!");
