--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
     <img id="mannyImage" src="Manny.jpg" alt="Manny">
     <span id="parolaNascosta" style="display: none;">Parola Segreta</span>
+    <iframe width="110" height="200" src="https://www.myinstants.com/instant/huh-cat-meme-88154/embed/" frameborder="0" scrolling="no"></iframe>
     <script>
             document.getElementById('mannyImage').addEventListener('click', function(event) {
             // Ottieni le coordinate del click rispetto all'immagine
