--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
             const zonaClicYFine = 354;   // Coordinata Y fine zona
 
             const suoni = [
-                "https://www.myinstants.com/instant/meme-cat-93739/embed/", // Inserisci qui il primo link
-                //"LINK_AL_SUONO_2", // Inserisci qui il secondo link
-                //"LINK_AL_SUONO_3", // Inserisci qui il terzo link
-                // Aggiungi altri link qui
+                "sounds/chipi.mp3", // Inserisci qui il primo link
+                "sounds/huh.mp3",//"LINK_AL_SUONO_2", // Inserisci qui il secondo link
+                "sounds/bass.mp3",//"LINK_AL_SUONO_3", // Inserisci qui il terzo link
+                "sounds/nobass.mp3",// Aggiungi altri link qui
+                "sounds/argue.mp3",
             ];
 
             // Verifica se il click è all'interno della zona
