--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </style>
 </head>
 <body>
-    <p>Miaus Mannyiacus Kawaii's password: <span id="parolaNascostaContainer"><span id="parolaNascosta" style="display: none;">ETEREO</span></span></p>
+    <p>Miaus Mannyiacus Kawaii's password: <span id="parolaNascostaContainer"><span id="parolaNascosta" style="display: none;">ZAMPA</span></span></p>
     
     <img id="mannyImage" src="Manny.jpg" alt="Manny">
     
